# renode-microros-demo

./: .gitignore  README.md  build.bash  build_kernel.bash  build_yocto.bash  download_binaries.sh  run_ros2_communication_demo.bash
renode/: first_instance.resc  renode_publisher_runner.resc  second_instance.resc  start_agent.sh  start_second_agent.sh  stm32f4_discovery-kit.repl  zynq.resc  zynq_login.resc
src/microros-sensor-publisher-subscriber/: CMakeLists.txt  serial.conf
src/microros-sensor-publisher-subscriber/src/: main.c
src/ros2-sensor-subscriber/: CMakeLists.txt  package.xml
src/ros2-sensor-subscriber/src/: subscriber_node.cpp
tests/: comms-first.robot  comms-second.robot  multi-node.robot  ros2_communication.robot  single-node.robot
